# PROJECT_Energy_Risk_Manager

./: .clangd  README.md  compile_flags.txt
EnergyRiskMonitor/: .clangd  .gitignore  compile_flags.txt
EnergyRiskMonitor/backend/: CMakeLists.txt  compile_flags.txt
EnergyRiskMonitor/backend/include/: analysis.h  analytics_engine.h  data_loader.h  dataset_importer.h  display.h  features.h  json_api.h  risk_engine.h
EnergyRiskMonitor/backend/src/: analysis.cpp  analytics_engine.cpp  data_loader.cpp  dataset_importer.cpp  display.cpp  features.cpp  json_api.cpp  main.cpp  risk_engine.cpp
EnergyRiskMonitor/data/: energy_data.csv  events.csv
EnergyRiskMonitor/docs/: PROJECT_WALKTHROUGH.md
EnergyRiskMonitor/frontend/: app.js  index.html  styles.css
EnergyRiskMonitor/scratch/: mock_firebase_data.js  seed_database.js  testFormatter.js  testValidator.js
EnergyRiskMonitor/services/: FirebaseRegionInsightRepository.js  GeminiFallbackService.js  GeminiResponseValidator.js  RegionInsightController.js  RegionNormalizer.js  analyticsValidator.js  server.js
